Correctly align both columns, centre avatar

--- a/less/main.less
+++ b/less/main.less
@@ -2,6 +2,7 @@ body, html {
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 20px;
 	font-weight: 300;
+	color: #5C5C5C;
 	margin: 0;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
@@ -49,9 +50,29 @@ a {
 	}
 }
 
+.main {
+	display: flex;
+}
+
 .side {
-	width: 33%;
 	text-align: center;
+	width: 33%;
+	display: flex;
+	align-items: center;
+
+	.caption {
+		h1, h3 {
+			display: block;
+		}
+	}
+}
+
+.info {
+	width: 67%;
+}
+
+.side-content {
+	width: 100%;
 }
 
 .avatar {
